fix bug #30654 (persistent connection is deleted from hash if there was exclusive connection with the same credentials) No need for MFB here - 5.x.x branches work fine.